# hirsh

./: .gitignore  Makefile  README.md  config.sample.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt
deployment/: .gitignore  Makefile  hosts  playbook.yaml  uninstall.yaml
deployment/roles/hirsh/defaults/: main.yaml
deployment/roles/hirsh/handlers/: main.yaml
deployment/roles/hirsh/tasks/: deps.yaml  env.yaml  main.yaml  service.yaml
deployment/roles/hirsh/templates/: config.yaml.j2  hirsh.service.j2
deployment/roles/hirsh/vars/: main.yaml
deployment/vars/: secrets.sample.yaml
hirsh/: __init__.py  __main__.py  config.py  daemon.py  logging.py  runtime.py
hirsh/detectors/: network.py
hirsh/entities/: __init__.py  base.py  events.py  logs.py  notifiers.py
hirsh/managers/: base.py  events.py  logs.py
hirsh/repositories/: __init__.py  database.py  events.py  logs.py
hirsh/services/: events.py  monitors.py  notifiers.py
outage_detector/: __main__.py  config.py  daemon.py  logging.py  monitors.py  queue.py  runtime.py
outage_detector/entities/: __init__.py  base.py  events.py  logs.py
outage_detector/repositories/: __init__.py  database.py  events.py  logs.py
outage_detector/services/: events.py  monitors.py  network.py  notifiers.py
tests/: conftest.py  runtime.py  test_daemon.py
tests/test_repositories/: test_logs.py
tests/test_services/: test_events.py
