[tool.poetry]
name = "outage-detector"
version = "0.0.1"
description = "A RaspberryPI-based automatous system that detects electricity and ISP outages"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "outage_detector"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
uvloop = "^0.17.0"
aiogram = "^2.23.1"
typer = "^0.7.0"
pydantic = "^1.10.2"
SQLAlchemy = {extras = ["asyncio", "mypy"], version = "^1.4.44"}
PyYAML = "^6.0"
dependency-injector = "^4.40.0"
aiosqlite = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.155"
mypy = "^0.991"
types-PyYAML = "^6.0.12.2"
sqlalchemy-stubs = "^0.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"

[tool.ruff]

line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
